# FinalWeekOneProject

./: README.md
backend/: .gitignore  pyproject.toml  requirements.txt  vercel.json
backend/app/: main.py
backend/app/config/: config.py
backend/app/core/: logger.py
backend/app/database/: database.py
backend/app/models/: job.py
backend/app/routes/: job.py
backend/app/schemas/: job.py
backend/app/scrapper/: jobscrapper.py  schemas.py
backend/app/scrapper/remotive/: client.py  parser.py  scraper.py
backend/app/services/: job.py
backend/app/tests/scrapper/: test_remotive_parser.py
