[project]
name = "job-platform-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn==0.50.2",
    "SQLAlchemy==2.0.51",
    "psycopg2-binary==2.9.12",
    "python-dotenv==1.2.2",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.14.1",
    "beautifulsoup4==4.15.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.4.2",
    "colorama==0.4.6",
    "greenlet==3.5.3",
    "h11==0.16.0",
    "idna==3.18",
    "iniconfig==2.3.0",
    "packaging==26.2",
    "pluggy==1.6.0",
    "pydantic_core==2.46.4",
    "Pygments==2.20.0",
    "pytest==9.1.1",
    "requests==2.34.2",
    "soupsieve==2.8.4",
    "starlette==1.3.1",
    "typing-inspection==0.4.2",
    "typing_extensions==4.16.0",
    "urllib3==2.7.0"
]